Connected animals section with database - can now add animal fields and view them with upgraded listview - updating adapter with values from dialog is still buggy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <!-- Animal_add Activity -->
     <string name="str_animals_add_type">Type</string>
     <string name="str_animals_add_number">Number</string>
+    <string name="str_animals_add_name">Name</string>
 
     <!-- General Information Activity -->
 
