--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,28 @@
 <resources>
     <string name="app_name">SeniorDesignProject</string>
     <!-- Main Activity -->
-    <string name="str_menu_welcome">Welcome</string>
-    <string name="str_menu_weather">Weather</string>
-    <string name="str_menu_temp_example">30C</string>
-    <string name="str_menu_date_example">01.01.2022</string>
-    <string name="str_menu_weather_type">Clear</string>
-    <string name="str_menu_agenda">Agenda</string>
-    <string name="str_menu_crops">Crops</string>
-    <string name="str_menu_animals">Animals</string>
-    <string name="str_menu_general_information">General Information</string>
-    <string name="str_menu_settings">Settings</string>
+    <string name="str_main_Welcome">Welcome</string>
+    <string name="str_main_Weather">Weather</string>
+    <string name="str_main_TempExample">30C</string>
+    <string name="str_main_DateExample">01.01.2022</string>
+    <string name="str_main_WeatherType">Clear</string>
+    <string name="str_main_Agenda">Agenda</string>
+    <string name="str_main_Crops">Crops</string>
+    <string name="str_main_Animals">Animals</string>
+    <string name="str_main_GeneralInformation">General Information</string>
+    <string name="str_main_Settings">Settings</string>
     <!-- Weather Activity -->
     <string name="str_weather_today">Today</string>
     <string name="str_weather_tomorrow">Tomorrow</string>
     <string name="str_weather_nextweek">Next Week</string>
     <string name="str_weather_weather">Weather</string>
     <!-- Agenda Activity -->
-    <string name="str_agenda_calendar">Calendar</string>
-    <string name="str_agenda_todo_list">To-Do List</string>
-    <string name="str_agenda_notes">Notes</string>
-    <string name="str_agenda_inventory">Inventory</string>
+    <string name="str_agenda_Calendar">Calendar</string>
+    <string name="str_agenda_TodoList">To-Do List</string>
+    <string name="str_agenda_Notes">Notes</string>
+    <string name="str_agenda_Inventory">Inventory</string>
     <!-- Calendar Activity -->
-    <string name="str_calendar_new">New</string>
+    <string name="str_calendar_New">New</string>
     <string name="str_calendar_empty">empty</string>
     <string name="str_calendar_date">Date:</string>
     <string name="str_calendar_task">Task:</string>
@@ -42,19 +42,21 @@
     <!-- Crops Card View -->
     <string name="str_crops_cardView_acres">Acres</string>
     <!-- Animals Activity -->
-    <string name="str_animals_add_animals">Add Animals</string>
+    <string name="str_animals_AddAnimals">Add Animals</string>
     <!-- Animal_add Activity -->
-    <string name="str_animals_add_type">Type</string>
-    <string name="str_animals_add_number">Number</string>
-    <string name="str_animals_add_name">Name</string>
-    <!-- Animals detailed Activity -->
-    <string name="str_animals_detailed_addFeature">Add Feature</string>
-    <!-- Animals detailed Edit Activity -->
-    <string name="str_animals_detailed_edit_feature">Feature</string>
-    <string name="str_animals_detailed_edit_value">Value</string>
-    <string name="str_animals_detailed_edit_delete">Delete Feature</string>
-    <string name="str_animals_detailed_edit_cancel">Cancel</string>
-    <string name="str_animals_detailed_edit_save">Save</string>
+    <string name="str_animals_add_Type">Type</string>
+    <string name="str_animals_add_Number">Number</string>
+    <string name="str_animals_add_Name">Name</string>
+    <string name="str_animals_add_AddFeature">Add Feature</string>
+    <string name="str_animals_add_Confirm">Confirm</string>
+    <!-- Animals_Detailed Activity -->
+    <string name="str_animals_detailed_AddFeature">Add Feature</string>
+    <!-- Animals_Detailed_Edit Activity -->
+    <string name="str_animals_detailed_edit_Feature">Feature</string>
+    <string name="str_animals_detailed_edit_Value">Value</string>
+    <string name="str_animals_detailed_edit_Delete">Delete Feature</string>
+    <string name="str_animals_detailed_edit_Cancel">Cancel</string>
+    <string name="str_animals_detailed_edit_Save">Save</string>
 
 
 
