Added many features to calendar and todo list Full database connection with events and todo list Added detection system that takes detects last activity and takes values accordingly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,8 @@
     <string name="str_animals_detailed_AddFeature">Add Feature</string>
     <string name="str_animals_detailed_Delete">Delete</string>
     <string name="str_animals_detailed_ToDo">To-Do</string>
+    <!-- Animals_to_do Activity -->
+    <string name="str_animals_to_do_Add">Add</string>
 
     <!-- Animals_Detailed_Edit Activity -->
     <string name="str_animals_detailed_edit_Feature">Feature</string>
