Can now create general notes and field specific notes - Can view all of the notes from general notes section - Can create a note for any type of field from general notes section - Can auto fill inputs according to which activity user came

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,8 @@
     <string name="str_animals_detailed_edit_Cancel">Cancel</string>
     <string name="str_animals_detailed_edit_Save">Save</string>
 
+    <!-- Notes_general Activity -->
+    <string name="str_notes_general_NewNote">New Note</string>
 
     <!-- Notes Activity -->
     <string name="str_notes_NewNote">New Note</string>
